--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ serde = "1"
 serde_derive = "1"
 quick-xml = { version = "0.28.2", features = ["encoding", "serialize"] }
 tracing = "0.1"
+regex = "1.9.3"
